# fastapi_grpc

./: README.md  docker-compose.yaml
app/: main.py  pyproject.toml
app/api/: router.py
app/api/dependencies/grpc/: bakery.py  bar.py  kitchen.py
app/api/routes/: restaurants.py
app/business_logic/: restaurants.py
app/core/: config.py
app/pb/: bakery_pb2.py  bar_pb2.py  kitchen_pb2.py
app/schemas/: orders.py
bakery/: Dockerfile  main.py  pyproject.toml
bakery/pb/: bakery_pb2_grpc.py
bakery/protos/: bakery.proto
bakery/services/: bakery.py
bar/: Dockerfile  main.py  pyproject.toml
bar/pb/: bar_pb2_grpc.py
bar/protos/: bar.proto
bar/services/: bar.py
kitchen/: Dockerfile  main.py  pyproject.toml
kitchen/core/: config.py
kitchen/pb/: kitchen_pb2_grpc.py
kitchen/protos/: kitchen.proto
kitchen/services/: kitchen.py
